re-design the CA interface